--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PCG 3008/PCG 3008.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PCG 3008/PCG 3008.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>KIA RIO LX AC 1.4 4P 4X2 TM</h1>
+            <h1>RENAULT DUSTER DYNAMIQUE AC 2.0 5P 4X4 TM</h1>
             <p class="precio">$12,900</p>
             <div class="detalles">
-                <span>2019</span>
-                <span>Placa: M</span>
+                <span>2014</span>
+                <span>Placa: P</span>
             </div>
         </div>
 
@@ -64,6 +64,7 @@
             <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -74,11 +75,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">KIA</span>
+                    <span class="info-value">RENAULT</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">RIO LX AC 1.4 4P 4X2 TM</span>
+                    <span class="info-value">DUSTER DYNAMIQUE AC 2.0 5P 4X4 TM</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -86,11 +87,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">sedan</span>
+                    <span class="info-value">SUV</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2019</span>
+                    <span class="info-value">2014</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -98,11 +99,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Rojo</span>
+                    <span class="info-value">Verde</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Manabi</span>
+                    <span class="info-value">Pichincha</span>
                 </div>
             </div>
         </div>
@@ -110,7 +111,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Kia Rio LX AC 1.4 4P 4×2 TM 2019 es un sedán/hatchback compacto de 4 puertas con motor 1.4 litros a gasolina, tracción delantera (4×2), transmisión manual (TM) y aire acondicionado (AC). Está diseñado para ofrecer una conducción práctica, económica y confortable para el uso diario, con buen equilibrio entre rendimiento y consumo de combustible.</p>
+            <p>El Renault Duster Dynamique AC 2.0 5P 4×4 TM 2014 es un SUV de 5 puertas con motor 2.0 litros, tracción 4×4, transmisión manual y aire acondicionado. Está diseñado para ofrecer comodidad, versatilidad y buena capacidad en terrenos variados, combinando espacio interior para pasajeros y equipaje con un desempeño equilibrado tanto en ciudad como fuera de carretera. Su configuración lo hace ideal para quienes buscan un vehículo práctico y sólido para uso diario y viajes.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -120,7 +121,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/ads.mp4" type="video/mp4">
+                        <source src="imgs/EQW.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -197,11 +198,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$66.61</span>
+                    <span class="dato-value">$206.55</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Gad Rumiñahui</span>
+                    <span class="dato-value">Quito</span>
                 </div>
             </div>
         </div>
@@ -239,7 +240,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">1 dueño</span>
+                    <span class="dato-value">3 dueños</span>
                 </div>
             </div>
         </div>
