--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/ABD 6128/ABD 6128.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/ABD 6128/ABD 6128.html
@@ -50,10 +50,10 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>HYUNDAI I10 CM 5DR 1.1</h1>
-            <p class="precio">$6,900</p>
+            <h1>VOLKSWAGEN AMAROK TDI 2HBA43 AC 2.0 CD 4X2 TM DIESEL</h1>
+            <p class="precio">$12,900</p>
             <div class="detalles">
-                <span>2012</span>
+                <span>2013</span>
                 <span>Placa: A</span>
             </div>
         </div>
@@ -74,11 +74,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">HYUNDAI</span>
+                    <span class="info-value">VOLKSWAGEN</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">I10 CM 5DR 1.1</span>
+                    <span class="info-value">AMAROK TDI 2HBA43 AC 2.0 CD 4X2 TM DIESEL</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">sedan</span>
+                    <span class="info-value">Pickup</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
@@ -94,11 +94,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
-                    <span class="info-value">Gasolina</span>
+                    <span class="info-value">Diesel</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Plateado</span>
+                    <span class="info-value">Blanco</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
@@ -110,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Hyundai i10 1.1 de 2012, versión de 5 puertas, es un auto compacto diseñado para la ciudad, con tracción delantera y motor de gasolina de 1086 cc (4 cilindros en línea) que entrega alrededor de 69 caballos de fuerza</p>
+            <p>Está diseñada para combinar capacidad de carga y funcionalidad con comodidad para pasajeros. Su motor diésel 2.0 ofrece un buen equilibrio entre potencia y eficiencia de combustible, mientras que la configuración 4×2 la hace adecuada para uso urbano y en carretera, con buena maniobrabilidad y menores costos de operación que sus versiones 4×4. La cabina doble brinda espacio para varios ocupantes.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -120,7 +120,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/I10.mp4" type="video/mp4">
+                        <source src="imgs/EWQ.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -179,11 +179,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Estado:</span>
-                    <span class="dato-value">0 multa</span>
+                    <span class="dato-value">2 multas</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$00.00</span>
+                    <span class="dato-value">$270.00</span>
                 </div>
             </div>
         </div>
@@ -193,15 +193,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2025</span>
+                    <span class="dato-value">2024</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$74.22</span>
+                    <span class="dato-value">$246.77</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Quito - Bicentenario</span>
+                    <span class="dato-value">Archidona</span>
                 </div>
             </div>
         </div>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$61.00</span>
+                    <span class="dato-value">$316.56</span>
                 </div>
             </div>
         </div>
@@ -239,7 +239,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">4 dueños</span>
+                    <span class="dato-value">7 dueños</span>
                 </div>
             </div>
         </div>
