--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PCO 5283/PCO 5283.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PCO 5283/PCO 5283.html
@@ -63,6 +63,7 @@
             <img src="imgs/FOTO1.jpeg" alt="Imagen 1" class="carrusel-img active">
             <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
+            <img src="imgs/FOTO44.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
@@ -179,7 +180,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$35.32</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -193,11 +194,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$196.00</span>
+                    <span class="dato-value">$106.99</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">GAD JUJAN</span>
+                    <span class="dato-value">Rocafuerte</span>
                 </div>
             </div>
         </div>
@@ -211,7 +212,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$196.00</span>
+                    <span class="dato-value">$241.56</span>
                 </div>
             </div>
         </div>
