--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/QAA 1070/QAA 1070.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/QAA 1070/QAA 1070.html
@@ -62,6 +62,7 @@
         <div class="carrusel">
             <img src="imgs/foto1.jpeg" alt="Imagen 1" class="carrusel-img active">
             <img src="imgs/foto2.jpeg" alt="Imagen 2" class="carrusel-img">
+            <img src="imgs/FOTO33.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/foto3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/foto4.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
