--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PNV 0202/PNV 0202.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PNV 0202/PNV 0202.html
@@ -180,11 +180,11 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Estado:</span>
-                    <span class="dato-value">1 multa</span>
+                    <span class="dato-value"> multa</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$70.50</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -216,7 +216,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$61.00</span>
+                    <span class="dato-value">$261.00</span>
                 </div>
             </div>
         </div>
@@ -230,7 +230,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Monto:</span>
-                    <span class="dato-value">$261.56</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
