--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/TBB 2217/TBB 2217.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/TBB 2217/TBB 2217.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>CHEVROLET SWIFT</h1>
-            <p class="precio">$3,900</p>
+            <h1>KIA CERATO FORTE 1.6L LX MT</h1>
+            <p class="precio">$7,900</p>
             <div class="detalles">
-                <span>1994</span>
-                <span>Placa: P</span>
+                <span>2011</span>
+                <span>Placa: A</span>
             </div>
         </div>
 
@@ -64,7 +64,6 @@
             <img src="imgs/FOTO2.jpeg" alt="Imagen 2" class="carrusel-img">
             <img src="imgs/FOTO3.jpeg" alt="Imagen 3" class="carrusel-img">
             <img src="imgs/FOTO4.jpeg" alt="Imagen 3" class="carrusel-img">
-            <img src="imgs/FOTO5.jpeg" alt="Imagen 3" class="carrusel-img">
             <button class="carrusel-btn prev">&#10094;</button>
             <button class="carrusel-btn next">&#10095;</button>
         </div>
@@ -75,11 +74,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">CHEVROLET</span>
+                    <span class="info-value">HYUNDAI</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">SWIFT</span>
+                    <span class="info-value">I10 CM 5DR 1.1</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -91,7 +90,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">1994</span>
+                    <span class="info-value">2012</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -99,11 +98,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Plomo</span>
+                    <span class="info-value">Plateado</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Pichincha</span>
+                    <span class="info-value">Azuay</span>
                 </div>
             </div>
         </div>
@@ -111,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Chevrolet Swift sedán es un vehículo subcompacto de 4 puertas, diseñado para ofrecer economía, practicidad y facilidad de manejo. Cuenta con baúl independiente, tamaño ideal para la ciudad y una mecánica sencilla que permite bajo consumo de combustible y mantenimiento accesible. Es un auto confiable para uso diario, cómodo para pasajeros y adecuado tanto para desplazamientos urbanos como trayectos cortos en carretera.</p>
+            <p>El Hyundai i10 1.1 de 2012, versión de 5 puertas, es un auto compacto diseñado para la ciudad, con tracción delantera y motor de gasolina de 1086 cc (4 cilindros en línea) que entrega alrededor de 69 caballos de fuerza</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -121,7 +120,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/ASD.mp4" type="video/mp4">
+                        <source src="imgs/I10.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -180,7 +179,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Estado:</span>
-                    <span class="dato-value"> multa</span>
+                    <span class="dato-value">0 multa</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
@@ -194,15 +193,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2023</span>
+                    <span class="dato-value">2025</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$383.23</span>
+                    <span class="dato-value">$74.22</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Mejia</span>
+                    <span class="dato-value">Quito - Bicentenario</span>
                 </div>
             </div>
         </div>
@@ -216,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$261.00</span>
+                    <span class="dato-value">$61.00</span>
                 </div>
             </div>
         </div>
@@ -240,7 +239,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">3 dueños</span>
+                    <span class="dato-value">4 dueños</span>
                 </div>
             </div>
         </div>
