--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/CAH 0051/CAH 0051.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/CAH 0051/CAH 0051.html
@@ -51,7 +51,7 @@
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
             <h1>CHEVROLET CHEVYTAXI</h1>
-            <p class="precio">$4,900</p>
+            <p class="precio">$6,200</p>
             <div class="detalles">
                 <span>2008</span>
                 <span>Placa: C</span>
@@ -190,15 +190,15 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Año:</span>
-                    <span class="dato-value">2025</span>
+                    <span class="dato-value">2026</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$12.00</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">TULCAN</span>
+                    <span class="dato-value">Mejia</span>
                 </div>
             </div>
         </div>
@@ -212,7 +212,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$36.00</span>
+                    <span class="dato-value">$91.00</span>
                 </div>
             </div>
         </div>
@@ -236,7 +236,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">2 dueños</span>
+                    <span class="dato-value">3 dueños</span>
                 </div>
             </div>
         </div>
